# AltynOrda

backend/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/ai/: __init__.py  client.py  exceptions.py  prompts.py  schemas.py  service.py
backend/app/api/: __init__.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  password.py
backend/app/config/: settings.py
backend/app/constants/: __init__.py
backend/app/core/: __init__.py  unit_of_work.py
backend/app/database/: __init__.py  base.py  redis.py  session.py
backend/app/dependencies/: __init__.py  database.py  services.py
backend/app/enums/: __init__.py
backend/app/exceptions/: __init__.py  base.py  handlers.py
backend/app/i18n/: messages.py
backend/app/integrations/: __init__.py
backend/app/middleware/: logging.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  achievement.py  achievement_definition.py  artifact.py  certificate.py  chat_history.py  city.py  embedding.py  gallery_image.py  gamification_setting.py  group.py  group_membership.py  historical_document.py  historical_figure.py  homepage_content.py  notification.py  progress.py  quest.py  suggested_prompt.py  system_setting.py  user.py  user_cosmetic.py
backend/app/rag/: __init__.py  chunker.py  embeddings.py  extraction.py  pipeline.py  retriever.py
backend/app/repositories/: __init__.py  achievement.py  achievement_definition.py  artifact.py  base.py  certificate.py  chat_history.py  city.py  embedding.py  gallery_image.py  gamification_setting.py  group.py  group_membership.py  historical_document.py  historical_figure.py  homepage_content.py  quest.py  (+6 more)
(+125 files in other folders)
