[project]
name = "orda-backend"
version = "0.1.0"
description = "ORDA – AI Historical Journey backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "pyjwt>=2.10.0",
    "argon2-cffi>=23.1.0",
    "groq>=0.13.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "pgvector>=0.3.6",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "email-validator>=2.2.0",
    "minio>=7.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "polyfactory>=2.18.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"app/migrations/**" = ["E501"]
"app/exceptions/base.py" = ["N818"]
"app/api/**" = ["B008"]
"app/schemas/common.py" = ["UP046"]
"app/repositories/base.py" = ["UP046"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["app", "main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
